<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_drawer_menu_q_shop"
            android:title="@string/menu_item_shop"
            android:icon="@drawable/ic_shop"
            />

        <item
            android:id="@+id/navigation_drawer_menu_q_video"
            android:title="@string/menu_item_video"
            android:icon="@drawable/ic_live_tv"
            />

        <item
            android:id="@+id/navigation_drawer_menu_q_music"
            android:title="@string/menu_item_music"
            android:icon="@drawable/ic_music_note"
            />

        <item
            android:id="@+id/navigation_drawer_menu_q_books"
            android:title="@string/menu_item_books"
            android:icon="@drawable/ic_menu_book"
            />

        <item
            android:id="@+id/navigation_drawer_menu_q_food"
            android:title="@string/menu_item_food"
            android:icon="@drawable/ic_local_pizza"
            />
    </group>

    <item android:title="@string/menu_item_communicate">
        <menu>
            <item
                android:id="@+id/navigation_drawer_menu_settings"
                android:title="@string/menu_item_settings"
                android:icon="@drawable/ic_settings"
                />
            <item
                android:id="@+id/navigation_drawer_menu_send"
                android:title="@string/menu_item_send"
                android:icon="@drawable/ic_send"
                />
        </menu>
    </item>

</menu>